HBASE-27201 Clean up error-prone findings in hbase-backup