@@ -112,7 +112,7 @@ public class TestBackupSystemTable {
     Long code = 100L;
     table.writeBackupStartCode(code, "root");
     String readCode = table.readBackupStartCode("root");
-    assertEquals(code, new Long(Long.parseLong(readCode)));
+    assertEquals(code, Long.valueOf(readCode));
     cleanBackupTable();
   }
 
@@ -126,7 +126,7 @@ public class TestBackupSystemTable {
   }
 
   @Test
-  public void testBackupHistory() throws IOException {
+  public void testBackupHistory() throws Exception {
     int n = 10;
     List<BackupInfo> list = createBackupInfoList(n);
 
@@ -153,7 +153,7 @@ public class TestBackupSystemTable {
   }
 
   @Test
-  public void testBackupDelete() throws IOException {
+  public void testBackupDelete() throws Exception {
     try (BackupSystemTable table = new BackupSystemTable(conn)) {
       int n = 10;
       List<BackupInfo> list = createBackupInfoList(n);
@@ -226,29 +226,29 @@ public class TestBackupSystemTable {
     tables2.add(TableName.valueOf("t5"));
 
     table.addIncrementalBackupTableSet(tables1, "root");
-    BackupSystemTable table = new BackupSystemTable(conn);
-    TreeSet<TableName> res1 = (TreeSet<TableName>) table.getIncrementalBackupTableSet("root");
-    assertTrue(tables1.size() == res1.size());
-    Iterator<TableName> desc1 = tables1.descendingIterator();
-    Iterator<TableName> desc2 = res1.descendingIterator();
-    while (desc1.hasNext()) {
-      assertEquals(desc1.next(), desc2.next());
+
+    try (BackupSystemTable systemTable = new BackupSystemTable(conn)) {
+      TreeSet<TableName> res1 =
+        (TreeSet<TableName>) systemTable.getIncrementalBackupTableSet("root");
+      assertTrue(tables1.size() == res1.size());
+      Iterator<TableName> desc1 = tables1.descendingIterator();
+      Iterator<TableName> desc2 = res1.descendingIterator();
+      while (desc1.hasNext()) {
+        assertEquals(desc1.next(), desc2.next());
+      }
+      systemTable.addIncrementalBackupTableSet(tables2, "root");
+      TreeSet<TableName> res2 =
+        (TreeSet<TableName>) systemTable.getIncrementalBackupTableSet("root");
+      assertTrue((tables2.size() + tables1.size() - 1) == res2.size());
+      tables1.addAll(tables2);
+      desc1 = tables1.descendingIterator();
+      desc2 = res2.descendingIterator();
+      while (desc1.hasNext()) {
+        assertEquals(desc1.next(), desc2.next());
+      }
     }
 
-    table.addIncrementalBackupTableSet(tables2, "root");
-    TreeSet<TableName> res2 = (TreeSet<TableName>) table.getIncrementalBackupTableSet("root");
-    assertTrue((tables2.size() + tables1.size() - 1) == res2.size());
-
-    tables1.addAll(tables2);
-
-    desc1 = tables1.descendingIterator();
-    desc2 = res2.descendingIterator();
-
-    while (desc1.hasNext()) {
-      assertEquals(desc1.next(), desc2.next());
-    }
     cleanBackupTable();
-
   }
 
   @Test
@@ -274,9 +274,9 @@ public class TestBackupSystemTable {
     for (TableName t : tables) {
       Map<String, Long> rstm = result.get(t);
       assertNotNull(rstm);
-      assertEquals(rstm.get("rs1:100"), new Long(100L));
-      assertEquals(rstm.get("rs2:100"), new Long(101L));
-      assertEquals(rstm.get("rs3:100"), new Long(103L));
+      assertEquals(rstm.get("rs1:100"), Long.valueOf(100L));
+      assertEquals(rstm.get("rs2:100"), Long.valueOf(101L));
+      assertEquals(rstm.get("rs3:100"), Long.valueOf(103L));
     }
 
     Set<TableName> tables1 = new TreeSet<>();
@@ -301,22 +301,22 @@ public class TestBackupSystemTable {
       Map<String, Long> rstm = result.get(t);
       assertNotNull(rstm);
       if (t.equals(TableName.valueOf("t3")) == false) {
-        assertEquals(rstm.get("rs1:100"), new Long(100L));
-        assertEquals(rstm.get("rs2:100"), new Long(101L));
-        assertEquals(rstm.get("rs3:100"), new Long(103L));
+        assertEquals(rstm.get("rs1:100"), Long.valueOf(100L));
+        assertEquals(rstm.get("rs2:100"), Long.valueOf(101L));
+        assertEquals(rstm.get("rs3:100"), Long.valueOf(103L));
       } else {
-        assertEquals(rstm.get("rs1:100"), new Long(200L));
-        assertEquals(rstm.get("rs2:100"), new Long(201L));
-        assertEquals(rstm.get("rs3:100"), new Long(203L));
+        assertEquals(rstm.get("rs1:100"), Long.valueOf(200L));
+        assertEquals(rstm.get("rs2:100"), Long.valueOf(201L));
+        assertEquals(rstm.get("rs3:100"), Long.valueOf(203L));
       }
     }
 
     for (TableName t : tables1) {
       Map<String, Long> rstm = result.get(t);
       assertNotNull(rstm);
-      assertEquals(rstm.get("rs1:100"), new Long(200L));
-      assertEquals(rstm.get("rs2:100"), new Long(201L));
-      assertEquals(rstm.get("rs3:100"), new Long(203L));
+      assertEquals(rstm.get("rs1:100"), Long.valueOf(200L));
+      assertEquals(rstm.get("rs2:100"), Long.valueOf(201L));
+      assertEquals(rstm.get("rs3:100"), Long.valueOf(203L));
     }
 
     cleanBackupTable();
@@ -485,15 +485,12 @@ public class TestBackupSystemTable {
     return ctxt;
   }
 
-  private List<BackupInfo> createBackupInfoList(int size) {
+  private List<BackupInfo> createBackupInfoList(int size) throws InterruptedException {
     List<BackupInfo> list = new ArrayList<>();
     for (int i = 0; i < size; i++) {
       list.add(createBackupInfo());
-      try {
-        Thread.sleep(10);
-      } catch (InterruptedException e) {
-        e.printStackTrace();
-      }
+      // XXX Why do we need this sleep?
+      Thread.sleep(100);
     }
     return list;
   }
